--- a/style/scss/containers/_globals.scss
+++ b/style/scss/containers/_globals.scss
@@ -25,11 +25,11 @@ input, select {
 }
 
 #wrapper {
-  min-height: 70vh;
+  min-height: 75vh;
 }
 
 .container {
-  margin-top: 60px; 
+  margin-top: 60px;
   max-width: 100%;
 }
 
@@ -42,9 +42,15 @@ input, select {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 20%);
 }
 
 * {
   transition: width 300ms;
+}
+
+.hidden_large {
+  @media screen and (min-width: 780px) {
+    display: none;
+  }
 }
